--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/DonViLK/Details.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/DonViLK/Details.cshtml
@@ -86,7 +86,7 @@
                     </dt>
                     <dd>
                         <ul>
-                            <li> <img style="width:500px;height: 600px ; object-fit: cover" src="~/FileUpLoad/dvlk/@Model.minhChung" /></li>
+                            <li> <iframe style="width:500px;height: 600px ; object-fit: cover" src="~/FileUpLoad/dvlk/@Model.minhChung" /></li>
                             <li> @Html.DisplayFor(model => model.minhChung) </li>
                         </ul>
                     </dd>
