--- a/HiemMauNhanDao/HiemMauNhanDao/Views/DTCHM/Index.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/DTCHM/Index.cshtml
@@ -249,7 +249,7 @@
                                             else
                                             {
 
-                                                @Html.ActionLink("Đăng ký", "Create", "PhieuDKHM", new { id = item.IdDTCHM }, new { @class = "genric-btn info radius" })
+                                                @Html.ActionLink("Đăng ký", "Create", "PhieuDKHM", new { id = item.IdDTCHM, baiDang = item.IdDTCHM }, new { @class = "genric-btn info radius" })
 
                                             }
 
