--- a/HiemMauNhanDao/HiemMauNhanDao/Views/DangKyTK/NguoiDung.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/DangKyTK/NguoiDung.cshtml
@@ -152,7 +152,7 @@
                                                 <th style="width:400px">
                                                     <div>
                                                         <a>Ngày Sinh</a>
-                                                        @Html.EditorFor(model => model.ngaySinh, new { htmlAttributes = new { @class = "single-input", @type = "date", @for = "datepicker" } })
+                                                        @Html.EditorFor(model => model.ngaySinh, new { htmlAttributes = new { @class = "single-input", @type = "date", @for = "datepicker",@id= "ngaySinh" } })
                                                     </div>
                                                 </th>
                                                 <th class="col-lg-6">
