--- a/HiemMauNhanDao/HiemMauNhanDao/Views/KetQuaHienMau/Index.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/KetQuaHienMau/Index.cshtml
@@ -193,6 +193,7 @@
                                                         <button type="button" tabindex="0" class="dropdown-item  "> @Html.ActionLink("Khám sức khỏe", "Create", new { id = item.idPDKHM })</button>
                                                     }
                                                     <button type="button" tabindex="0" class="dropdown-item  "> @Html.ActionLink("Xem thông tin đăng ký", "TTDK", new { id = item.idPDKHM })</button>
+                                                    <button type="button" tabindex="0" class="dropdown-item  "> @Html.ActionLink("Lịch sử đăng ký", "LSDK", new { id = item.idTTCN })</button>
                                                     <button type="button" tabindex="0" class="dropdown-item  "> @Html.ActionLink(" Xóa", "Delete", new { id = item.idPDKHM })</button>
                                                 </div>
                                             </div>
