--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/DotHienMau/CreateDHM.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/DotHienMau/CreateDHM.cshtml
@@ -10,12 +10,37 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-
+    <div class="app-page-title">
+        <div class="page-title-heading">
+            <div class="page-title-icon">
+                <i class="pe-7s-menu icon-gradient bg-ripe-malin"></i>
+            </div>
+            <div>
+                Đợt hiến máu
+                <div class="page-title-subheading">
+                </div>
+            </div>
+        </div>
+    </div>
+    <script>
+        $(function () {
+            $('#AlertBox').removeClass('hide');
+            $('#AlertBox').delay(5000).slideUp(500);
+        });
+    </script>
     <div class="form-horizontal">
         <hr />
+        <div class="panel-body">
+            @if (TempData["AlertMessage"] != null)
+            {
+                <div id="AlertBox" class="alert @TempData["AlertType"] hide">
+                    @TempData["AlertMessage"]
+                </div>
+            }
+        </div>
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-           Tên đợt hiến máu
+            Tên đợt hiến máu
             <div class="col-md-10">
                 @Html.EditorFor(model => model.TenDHM, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.TenDHM, "", new { @class = "text-danger" })
@@ -23,7 +48,7 @@
         </div>
 
         <div class="form-group">
-          Nội dung
+            Nội dung
             <div class="col-md-10">
                 @Html.EditorFor(model => model.noiDung, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.noiDung, "", new { @class = "text-danger" })
@@ -39,18 +64,10 @@
         </div>
 
         <div class="form-group">
-           Thời gian kết thúc
+            Thời gian kết thúc
             <div class="col-md-10">
                 @Html.EditorFor(model => model.tgKetThuc, new { htmlAttributes = new { @class = "form-control", @type = "date" } })
                 @Html.ValidationMessageFor(model => model.tgKetThuc, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.trangThai, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.trangThai, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.trangThai, "", new { @class = "text-danger" })
             </div>
         </div>
 
