--- a/HiemMauNhanDao/HiemMauNhanDao/Views/KetQuaHienMau/DanhSachKQ.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/KetQuaHienMau/DanhSachKQ.cshtml
@@ -77,182 +77,174 @@
                 <hr />
             </div>
         </div>
+        @using (Html.BeginForm("DanhSachKQ", "KetQuaHienMau", FormMethod.Post, new { @enctype = "multipart/form-data" }))
+        {
+            <div class="col-lg-12 mb-5 mb-lg-0">
+                <div class="col-lg-12 col-md-8">
+                    <h3 class="mb-30">Danh sách người tham gia</h3>
+                    <hr>
+                    <div class="panel-body">
+                        @if (TempData["AlertMessage"] != null)
+                        {
+                            <div id="AlertBox" class="alert @TempData["AlertType"] hide">
+                                @TempData["AlertMessage"]
+                            </div>
+                        }
+                    </div>
+                    <div class="main-card mb-3 card">
+                        <div class="card-body">
+                            <h5 class="card-title">Tìm kiếm</h5>
+                            <form class="">
+                                <div class="form-row">
+                                    <table class="mt-10">
+                                        <tr>
+                                            <th style="width:400px">
+                                                <input name="SearchString" value="@ViewBag.SearchStringKQ" id="exampleCity" type="text" class="single-input">
 
-        <div class="col-lg-12 mb-5 mb-lg-0">
-            <div class="col-lg-12 col-md-8">
-                <h3 class="mb-30">Danh sách người tham gia</h3>
-                <hr>
-                <div class="panel-body">
-                    @if (TempData["AlertMessage"] != null)
-                    {
-                        <div id="AlertBox" class="alert @TempData["AlertType"] hide">
-                            @TempData["AlertMessage"]
+                                                @*<input name="searchString1" value="@ViewBag.SearchString1" id="exampleCity" type="text" class="form-control">*@
+                                            </th>
+                                            <th class="col-lg-6">
+                                                <div>
+                                                    <div class="icon"><i class="fa fa-plane" aria-hidden="true"></i></div>
+                                                    <div class="form-select" id="default-select_1">
+                                                        <select>
+                                                            <option value=" 1">Đợt tổ chức</option>
+                                                            <option value="1">Chưa chọn</option>
+                                                            <option value="1">Hiến máu nhân đạo tháng 10</option>
+                                                            <option value="1">Hiến máu nhân đạo tháng 11</option>
+                                                            <option value="1">Hiến máu nhân đạo tháng 12</option>
+                                                            <option value="1">Hiến máu nhân đạo tháng 01</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            </th>
+                                        </tr>
+
+                                    </table>
+
+                                </div>
+                                <div>
+                                    <table style="margin-top:10px">
+                                        <tr class="col-md-4 ">
+                                            <th class="col-md-1">
+                                                <button type="submit" class="genric-btn primary-border radius">
+                                                    <i class="fa fa-search"></i> Tìm kiếm
+                                                </button>
+                                            </th>
+                                            <th class="col-sm-1">
+                                                <button class="  genric-btn danger-border radius"><i class="fa fa-times-circle"></i> Huỷ</button>
+                                            </th>
+                                            <th class="col-md-2">
+                                                <a href="@Url.Action("xuatFileExcel","KetQuaHienMau")" class="genric-btn success-border radius"  >
+                                                    Xuất file Excel
+                                                </a>
+                                            </th>
+                                        </tr>
+                                    </table>
+
+                                </div>
+                            </form>
                         </div>
-                    }
-                </div>
-                <div class="main-card mb-3 card">
-                    <div class="card-body">
-                        <h5 class="card-title">Tìm kiếm</h5>
-                        <form class="">
-                            <div class="form-row">
-                                <table class="mt-10">
-                                    <tr>
-                                        <th style="width:400px">
-                                            <input name="SearchString" value="@ViewBag.SearchStringKQ" id="exampleCity" type="text" class="single-input">
+                    </div>
+                    <div class="main-card mb-3 card">
+                        <div class="card-body">
+                            <table class="mb-0 table table-hover table table-bordered">
+                                <tr class="text-center">
+                                    <th>
+                                        STT
+                                    </th>
+                                    <th>
+                                        Tên đợt tổ chức
+                                    </th>
+                                    <th>
+                                        Mã kết quả
+                                    </th>
+                                    <th>
+                                        Họ tên
+                                    </th>
+                                    <th>
+                                        Giới tính
+                                    </th>
+                                    <th>
+                                        Số điện thoại
+                                    </th>
+                                    <th>
+                                        Nhóm máu
+                                    </th>
+                                    <th>
+                                        Trạng thái
+                                    </th>
+                                    <th>
+                                        Chức năng
+                                    </th>
+                                </tr>
+                                @{ var i = 1;}
+                                @foreach (var item in Model)
+                                {
+                                    <tr class="text-center">
+                                        <td>
+                                            @i
+                                        </td>
 
-                                            @*<input name="searchString1" value="@ViewBag.SearchString1" id="exampleCity" type="text" class="form-control">*@
-                                        </th>
-                                        <th class="col-lg-6">
+                                        <td style=" width: 250px;  word-wrap: break-word;">
+                                            @item.tenDTCHM
+                                        </td>
+                                        <td>
+                                            @item.IdKQHM
+                                        </td>
+                                        <td>
+                                            @item.hoTen
+                                        </td>
+                                        <td>
+                                            @(item.gioiTinh == true ? "Nam" : "Nữ")
+                                        </td>
+                                        <td>
+                                            @item.soDT
+                                        </td>
+                                        <td>
+                                            @item.nhomMau
+                                        </td>
+                                        <td class="text-center">
+                                            @item.trangThai2
+                                        </td>
+
+                                        <td>
                                             <div>
-                                                <div class="icon"><i class="fa fa-plane" aria-hidden="true"></i></div>
-                                                <div class="form-select" id="default-select_1">
-                                                    <select>
-                                                        <option value=" 1">Đợt tổ chức</option>
-                                                        <option value="1">Chưa chọn</option>
-                                                        <option value="1">Hiến máu nhân đạo tháng 10</option>
-                                                        <option value="1">Hiến máu nhân đạo tháng 11</option>
-                                                        <option value="1">Hiến máu nhân đạo tháng 12</option>
-                                                        <option value="1">Hiến máu nhân đạo tháng 01</option>
-                                                    </select>
+                                                <button type="button" aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" class="mb-2 mr-2 dropdown-toggle btn btn-outline-alternate">Chọn</button>
+                                                <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu" x-placement="right-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(105px, 0px, 0px);">
+                                                    @if (item.nhiemVu == "Xét nghiệm")
+                                                    {
+                                                        <button type="button" tabindex="0" class="dropdown-item  "> @Html.ActionLink("Xét nghiệm", "Edit", new { id = item.IdKQHM })</button>
+                                                    }
+                                                    else if (item.nhiemVu == "Lấy máu")
+                                                    {
+                                                        <button type="button" tabindex="0" class="dropdown-item  "> @Html.ActionLink("Lấy máu", "layMau", new { id = item.IdKQHM })</button>
+
+                                                    }
+                                                    <button type="button" tabindex="0" class="dropdown-item  "> @Html.ActionLink("Chi tiết kết quả", "Details", new { id = item.IdTTCN })</button>
+                                                    <button type="button" tabindex="0" class="dropdown-item  "> @Html.ActionLink("Xem thông tin đăng ký", "TTDK", new { id = item.idPDKHM })</button>
+
                                                 </div>
                                             </div>
-                                        </th>
+
+                                        </td>
                                     </tr>
-
-                                </table>
-
-                            </div>
-                            <div>
-                                <table style="margin-top:10px" >
-                                    <tr class="col-lg-4">
-                                        <th class="col-lg-1">
-                                            
-                                            <button type="submit" class="genric-btn primary-border radius">
-                                                <i class="fa fa-search"></i> Tìm kiếm
-                                            </button>
-                                        </th>
-                                        <th  class="col-lg-1">
-                                            <button class="  genric-btn danger-border radius"><i class="fa fa-times-circle"></i> Huỷ</button>
-                                        </th>
-                                        <th class="col-lg-2">
-                                            <button type="submit" class="genric-btn success-border radius"   href="@Url.Action("xuatFileExcel","KetQuaHienMau")">
-                                                Xuất file Excel
-                                            </button>
-                                        </th>
-                                        <th   class="col-lg-5">                                             
-                                            <button type="submit" class="genric-btn info-border radius  " ng-click="xuatExcel">
-                                               Xuất file PDF
-                                            </button>
-                                        </th>
-                                    </tr>
-                                </table>
-                             
-                            </div>
-                        </form>
-                    </div>
-                </div>
-                <div class="main-card mb-3 card">
-                    <div class="card-body">
-                        <table class="mb-0 table table-hover table table-bordered">
-                            <tr class="text-center">
-                                <th>
-                                    STT
-                                </th>
-                                <th>
-                                    Tên đợt tổ chức
-                                </th>
-                                <th>
-                                    Mã đăng ký
-                                </th>
-                                <th>
-                                    Mã kết quả
-                                </th>
-                                <th>
-                                    Họ tên
-                                </th>
-                                <th>
-                                    Giới tính
-                                </th>
-                                <th>
-                                    Số điện thoại
-                                </th>
-                                <th>
-                                    Nhóm máu
-                                </th>
-                                <th>
-                                    Trạng thái
-                                </th>
-                                <th>
-                                    Chức năng
-                                </th>
-                            </tr>
-                            @{ var i = 1;}
-                            @foreach (var item in Model)
-                            {
-                        <tr class="text-center">
-                            <td>
-                                @i
-                            </td>
-
-                            <td style=" width: 250px;  word-wrap: break-word;">
-                                @item.tenDTCHM
-                            </td>
-                            <td>
-                                @item.idPDKHM
-                            </td>
-                            <td>
-                                @item.IdKQHM
-                            </td>
-                            <td>
-                                @item.hoTen
-                            </td>
-                            <td>
-                                @(item.gioiTinh == true ? "Nam" : "Nữ")
-                            </td>
-                            <td>
-                                @item.soDT
-                            </td>
-                            <td>
-                                @item.nhomMau
-                            </td>
-                            <td class="text-center">
-                                @item.trangThai2
-                            </td>
-
-                            <td>
-                                <div>
-                                    <button type="button" aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" class="mb-2 mr-2 dropdown-toggle btn btn-outline-alternate">Chọn</button>
-                                    <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu" x-placement="right-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(105px, 0px, 0px);">
-                                        @if (item.nhiemVu == "Lấy máu")
-                                        {
-                                            <button type="button" tabindex="0" class="dropdown-item  "> @Html.ActionLink("Xét nghiệm", "Edit", new { id = item.IdKQHM })</button>
-                                        }
-                                        else if (item.nhiemVu == "Xét nghiệm ")
-                                        {
-                                            <button type="button" tabindex="0" class="dropdown-item  "> @Html.ActionLink("Lấy máu", "layMau", new { id = item.IdKQHM })</button>
-
-                                        }
-                                        <button type="button" tabindex="0" class="dropdown-item  "> @Html.ActionLink("Chi tiết kết quả", "Details", new { id = item.IdTTCN })</button>
-                                        <button type="button" tabindex="0" class="dropdown-item  "> @Html.ActionLink("Xem thông tin đăng ký", "TTDK", new { id = item.IdTTCN })</button>
-
-                                    </div>
-                                </div>
-                              
-                            </td>
-                        </tr>
                                     i++;
                                 }
-                        </table>
-                        <nav class="blog-pagination justify-content-center d-flex">
-                            <ul class="pagination">
-                                @Html.PagedListPager(Model, page => Url.Action("Index", new { page, @searchString = ViewBag.SearchStringKQ, @class = "page-link" }))
-                            </ul>
-                        </nav>
+                            </table>
+                            <nav class="blog-pagination justify-content-center d-flex">
+                                <ul class="pagination">
+                                    @Html.PagedListPager(Model, page => Url.Action("Index", new { page, @searchString = ViewBag.SearchStringKQ, @class = "page-link" }))
+                                </ul>
+                            </nav>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-        </div>
+            </div>
+        }
+
+
     </div>
 </section>
 
