--- a/HiemMauNhanDao/HiemMauNhanDao/Views/DotToChucHM/Details.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/DotToChucHM/Details.cshtml
@@ -93,8 +93,8 @@
                                             @Html.EditorFor(model => model.noiDung, new { htmlAttributes = new { @class = "single-textarea", @readonly = "readonly" } })
                                         </div>
                                         <div class="mt-10" style="margin-right:15px">
-                                            <a>Địa chỉ tổ chức</a>
-                                            @Html.EditorFor(model => model.diaChiToChuc, new { htmlAttributes = new { @class = "single-input" } })
+                                            <a>Địa chỉ tổ chức</a>                                                                              
+                                            @Html.EditorFor(model => model.diaChiToChuc, new { htmlAttributes = new { @class = "form-control ", @readonly = "readonly" } })
                                         </div>
                                     </form>
                                 </div>
